--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Post Details</title>
 </head>
 <body>
-
+<h1>Post Details</h1>
+<h2 th:text="${post.title}"></h2>
+<p th:text="${post.body}"></p>
 </body>
 </html>
