finish to exercises

--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>Post Details</h1>
+<p th:text="${post.user.email}"></p>
 <h2 th:text="${post.title}"></h2>
 <p th:text="${post.body}"></p>
 </body>
